--- a/Index.html
+++ b/Index.html
@@ -342,7 +342,7 @@
         </table>
         <table class="legend">
 
-            <tr><th><p>Legend</p></th></tr>
+            <tr><th style="width:400px"><p>Legend</p></th></tr>
             <tr><th class="tajweedatfal"><p>تحفيظ القران للاطفال</p></th></tr>
             <tr><th class="tajweedrijal"><p>حلقة تجويد للرجال</p></th></tr>
             <tr><th class="tajweednisa"><p>حلقة تجويد للنساء</p></th></tr>            
